--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- Lien vers le fichier CSS externe -->
   <link rel="stylesheet" href="style.css">
 </head>
+  <link rel="stylesheet" href="style.css">
 <body>
   <!-- Tout votre contenu HTML ici -->
 
